attempt to fix mobile nav scroll and z-index bug

--- a/src/scss/default.scss
+++ b/src/scss/default.scss
@@ -14,6 +14,7 @@ body {
 body {
   font-size: 16px;
   font-family: 'Karla', sans-serif;
+  position: relative;
 }
 
 #app {
