--- a/src/scss/nav-bar.scss
+++ b/src/scss/nav-bar.scss
@@ -4,7 +4,7 @@
   width: 100%;
   align-items: center;
   padding: 25px;
-  position: relative;
+  position: sticky;
   background: $very-light-grey;
   z-index: 10;
 
